prep/minio/minio_client_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-client
  namespace: minio
spec:
  host: minio-client.apps-crc.testing
  path: /
  port:
    targetPort: 9000
  to:
    kind: Service
    name: minio-client
