prep/minio/minio_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  name: minio
  namespace: minio
spec:
  host: minio.apps-crc.testing
  path: /
  port:
    targetPort: 9090
  to:
    kind: Service
    name: minio
